# MobileSimSetup

CLion/: CMakeLists.txt  README.md  forward.h  main.cpp
CLion/cmake/: FindARIA.cmake
VS2017/: README.md
VS2017/BaseProjectVS2017/: .gitignore  AriaBaseProject.sln  CMakeLists.txt  README.md
VS2017/BaseProjectVS2017/AriaBaseProject/: AriaBaseProject.vcxproj  AriaBaseProject.vcxproj.filters  CMakeLists.txt  forward.cpp  main.cpp
VS2017/BaseProjectVS2017/VisualStudioConfigs12.01.2019/VisualStudioCommunity2017/: .vsconfig
VS2017/BaseProjectVS2017/VisualStudioConfigs12.01.2019/VisualStudioCommunity2017Preview/: .vsconfig
VS2017/BaseProjectVS2017/VisualStudioConfigs12.01.2019/VisualStudioEnterprise2017/: .vsconfig
